--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
-# 🗝️ MiKey Log System : 心を込めた鍵管理システム
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>MiKey Log System</title>
+    <style>
+        body { background-color: #1a1a1a; color: #d4af37; font-family: sans-serif; padding: 30px; line-height: 1.6; }
+        .container { max-width: 600px; margin: auto; border: 2px solid #d4af37; padding: 20px; border-radius: 15px; background: #2d2d2d; box-shadow: 0 0 20px rgba(212,175,55,0.3); }
+        h1 { border-bottom: 2px solid #d4af37; padding-bottom: 10px; text-align: center; }
+        .feature { background: rgba(255,255,255,0.05); padding: 10px; margin: 10px 0; border-left: 4px solid #4caf50; }
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        th, td { border: 1px solid #444; padding: 10px; text-align: left; }
+        th { background: #d4af37; color: #000; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>🗝️ MiKey Log System</h1>
+        <p style="text-align:center; font-style:italic;">〜 心を込めた鍵管理システム 〜</p>
+        
+        <div class="feature">
+            <strong>🔒 自動施錠機能</strong><br>10秒後に自動でカチッとロック。
+        </div>
+        <div class="feature">
+            <strong>🚨 半ドア警告</strong><br>扉が開いたままだと赤く心配そうに点滅。
+        </div>
 
-Raspberry Pi Picoを使用した、4つの鍵を見守るスマートキーボックスのシステムです。
-鍵の持ち出し時間を監視し、LEDの優しい光で状態を教えてくれます。
-
-## 🌟 特徴
-- **自動施錠機能**: PCからの指令で解錠し、10秒後に自動でロック。閉め忘れを防ぎます。
-- **半ドア警告**: 扉がしっかり閉まっていないと、赤いLEDが「心配そうに」点滅します。
-- **お出かけタイマー**: 鍵が持ち出されてから1時間を過ぎると、緑の点滅から赤の点滅に変わり、長時間の外出をお知らせします。
-- **シンプル接続**: 汎用的なリレーとLED、スイッチだけで構成されています。
-
-## 🛠️ 準備するもの
-* Raspberry Pi Pico (または Pico W)
-* 電磁ソレノイド & リレーモジュール
-* 抵抗器付きLED（赤・緑）
-* リミットスイッチ（ドア用・各鍵用）
-
-## 🔌 配線図（回路のつながり）
-
-
-
-| 部品 | Picoピン番号 | 役割 |
-| :--- | :--- | :--- |
-| **Relay & Green LED** | GP19 | ドアの解錠と状態表示 |
-| **Door Red LED** | GP10 | 半ドア警告 |
-| **Door Switch** | GP9 | 扉の開閉検知 |
-| **Hook 1-4** | (各設定ピン) | 鍵の持ち出し状態を監視 |
-
-## 🚀 使い方
-1. `main.py` をRaspberry Pi Picoに書き込みます。
-2. PCのシリアル通信（Thonny）から `"UNLOCK"` という文字を送信してください。
-3. 魔法のように扉が開き、10秒経つとカチッと鍵がかかります。
-
-## 📝 現場に合わせたカスタマイズ
-`main.py` の 95行目付近にある時間を変更することで、警告が出るまでの時間を調整できます。
-```python
-if elapsed_sec < 3600: # 3600秒(1時間)を好きな時間に変えてね
+        <table>
+            <tr><th>部品</th><th>ピン</th><th>役割</th></tr>
+            <tr><td>解錠リレー</td><td>GP19</td><td>扉を開ける魔法</td></tr>
+            <tr><td>警告LED</td><td>GP10</td><td>半ドアお知らせ</td></tr>
+        </table>
+        
+        <p style="margin-top:20px; font-size:0.8em; text-align:center;">© 2026 MiKey Log</p>
+    </div>
+</body>
+</html>
